
# USER-VISIBLE CHANGES
* RFC-2060 -> RFC-3501.  Sunil Shetye.
* When storing flags, use +FLAGS.SILENT on IMAP4rev1, too, not just IMAP4.
  6.3.X had falsely assumed only IMAP4 supported SILENT.  Sunil Shetye.
* The "sleeping at" and "awakened at" messages are now only logged and printed
  in --verbose mode. Patch by Alexander Motzkau. Fixes Debian Bug#282259. (MA)

# INTERNAL CHANGES
* "stage" (type int) was converted to type "enum Stage".  Sunil Shetye.

--------------------------------------------------------------------------------

fetchmail 6.3.2 (to be released):

* SMTP/LMTP cleanup to fix these two bugs:
  - switch back to SMTP after having tried LMTP hosts (multiple smtphost hosts)
  - switch back to LMTP after sending a bounce.
  The patch removes the global state variable that was the root of this problem.
  Patch by Sunil Shetye. (MA)
* Don't complain about fetchall keep in --dumpconfig mode. Bug introduced in
  6.3.0.  Matthias Andree.
* fetchmailconf.py: Fix novice help for Poll interval and fetchall.
  Reported by Justin Pryzby, Debian Bug #344978.  Matthias Andree
* Some verbose output disappeared in debug mode. Adding further -v options would
  alternate between verbose and debug mode. debug mode now comprises all verbose
  output, and adding more -v options does not switch back from debug to verbose
  mode.  Matthias Andree

fetchmail 6.3.1 (released 2005-12-19):

# OBSOLETION WARNINGS
* The multidrop To/Cc guessing code along with the fragile duplicate suppressor
  is deprecated and may be removed from a future release. (MA)
* RPOP is obsolete, support may be removed from a future fetchmail release. (MA)

# SECURITY FIX IN THIS RELEASE
* CVE-2005-4348: Fix segmentation fault (null pointer dereference) in
  multidrop mode with headerless email.  See fetchmail-SA-2005-03.txt.
  Reported by Daniel Drake, patch by Sunil Shetye. (MA)

# OTHER BUG FIXES, DOCUMENTATION AND TRANSLATION UPDATES