@@ -1,1 +1,0 @@
-.so man1/fetchmail.1
